Stylised landing page.

--- a/index.html
+++ b/index.html
@@ -2,16 +2,36 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+	<meta charset="utf-8">
 
-  <title>elite-webdev-0</title>
-  <meta name="description" content="elite-webdev-0">
-  <meta name="author" content="PseudoCodeNerd">
+	<title>elite-webdev-0</title>
+	<meta name="description" content="elite-webdev-0">
+	<meta name="author" content="PseudoCodeNerd">
+	<link rel="stylesheet" href="style.css">
 
 </head>
-
 <body>
-        <h1>Vercel Test</h1>
-        <p> <b>Section 0: </b> elite webdev </p>
+
+	<div class="main">
+		<span style="color: #6272a4;font-style:italic;">
+			# elite-webdev
+		</span>
+		<span>
+			<span style="color:#ff79c6;">def</span>
+			<span style="color:#50fa7b;">section_zero</span>(<span style="color:#ffb86c;">website</span>):
+		</span>
+		<span>
+			<span style="padding-left: 40px;color:#bd93f9">vercel</span>
+			<span style="color: #50fa7b;">.deploy</span>(website)
+			<span style="color: #282a36; display:block">___</span>
+			<span style="color: #8be9fd">print</span>
+			(<span style="color: #f1fa8c;">'(͡° ͜ʖ ͡°)'</span>)
+		</span>
+		<span style="color: #282a36; display:block">___</span>
+		<span style="color: #6272a4;font-style:italic;">
+			# colors courtesy of dracula
+		</span>
+	</div>
+
 </body>
 </html>
